--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
   <title>Assetscube</title>
   <base href="/">
 
+  <!-- Goolg fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch:400,700|Londrina+Shadow" rel="stylesheet">
+  <!-- Goolg fonts END-->
+  <!-- This is for material icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- This is for material icons END-->
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
